--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -332,6 +332,11 @@ a#scrollUp i{
 	cursor: pointer;
 }
 
+.h{
+	color:#F22E00!important;
+	font-weight:bold;
+}
+
 .search_box input {
   background: #F0F0E9;
   border: medium none;
