--- a/web/sa/css/bootstrap.css
+++ b/web/sa/css/bootstrap.css
@@ -12,6 +12,7 @@ html {
 }
 body {
   margin: 0;
+  font-family: Microsoft YaHei,sans-serif;
 }
 article,
 aside,
@@ -1215,7 +1216,7 @@ a.bg-danger:hover {
 }
 .page-header {
   padding-bottom: 9px;
-  margin: 40px 0 20px;
+  margin: 70px 0 20px;
   border-bottom: 1px solid #eee;
 }
 ul,
