--- a/web/sa/css/sb-admin-2.css
+++ b/web/sa/css/sb-admin-2.css
@@ -348,3 +348,7 @@ table.dataTable thead .sorting:after {
 .category-form .display-off {
 	display: none;
 }
+
+.cursor-pointer {
+	cursor: pointer;
+}
