--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -213,7 +213,7 @@ a#scrollUp i{
 }
 
 .header-middle .container .row {
-  border-bottom: 1px solid #f5f5f5;
+/*   border-bottom: 1px solid #f5f5f5; */
   margin-left: 0;
   margin-right: 0;
   padding-bottom: 20px;
