--- a/web/sa/css/sb-admin-2.css
+++ b/web/sa/css/sb-admin-2.css
@@ -258,6 +258,16 @@ table.dataTable thead .sorting:after {
     line-height: 1.428571429;
 }
 
+.btn-circle.btn-sm {
+    width: 20px;
+    height: 20px;
+    padding: 3px 0;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.428571429;
+}
+
 .btn-circle.btn-lg {
     width: 50px;
     height: 50px;
