add user list in best product

--- a/web/sa/css/sb-admin-2.css
+++ b/web/sa/css/sb-admin-2.css
@@ -361,6 +361,9 @@ table.dataTable thead .sorting:after {
 .attribute-form .display-off {
 	display: none;
 }
+.user-form .display-off {
+	display: none;
+}
 .display-off {
 	display: none;
 }
