--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -762,8 +762,16 @@ ul.sub-menu {
   position: relative;
   z-index:3;
 }
+.left-sidebar h3, .brands_products h3 {
+  color: #B4ADA3;
+  font-family: Microsoft YaHei, 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  z-index:3;
+}
 
-.left-sidebar h2:after, h2.title:after{
+.left-sidebar h2:after, h2.title:after, .left-sidebar h3:after{
 	content: " ";
 	position: absolute;
 	border: 1px solid #f5f5f5;
@@ -774,7 +782,7 @@ ul.sub-menu {
 	z-index: -2;
 }
 
-.left-sidebar h2:before{
+.left-sidebar h2:before, .left-sidebar h3:before{
 	content: " ";
 	position: absolute;
 	background: #fff;
@@ -1889,7 +1897,8 @@ h2.title {
 }
 
 .check_out {
-  margin-left: 20px
+  margin-left: 20px;
+  margin-top: 0px;
 }
 
 
