--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -126,8 +126,10 @@ h1, h2, h3, h4, h5, h6 {
 
 a#scrollUp {
   bottom: 0px;
-  right: 10px;
-  padding: 5px 10px;
+/*   right: 10px; */
+  padding: 10px 15px;
+  width: 50px;
+  height: 50px;
   background: #FE980F;
   color: #FFF;
   -webkit-animation: bounce 2s ease infinite;
