--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -125,15 +125,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a#scrollUp {
-  bottom: 0px;
+  bottom: 45px;
 /*   right: 10px; */
   padding: 10px 15px;
   width: 50px;
   height: 50px;
   background: #FE980F;
   color: #FFF;
-  -webkit-animation: bounce 2s ease infinite;
-  animation: bounce 2s ease infinite;
+  /* -webkit-animation: bounce 2s ease infinite;
+  animation: bounce 2s ease infinite; */
+}
+
+a#scrollUp:hover {
+  color: rgb(149, 52, 8);
 }
 
 a#scrollUp i{
