--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -824,7 +824,7 @@ h2.title:before{
   background-color: #FFFFFF;
   border: 0 none;
   color: #FFFFFF;
-  padding: 5px 20px;
+  padding: 5px 10px;
 }
 
 .category-products .panel-default .panel-heading .panel-title a {
@@ -834,6 +834,14 @@ h2.title:before{
   font-size: 15px;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.category-products ul li {
+  padding-left: 5px;
+}
+
+.category-products ul li:hover {
+  box-shadow: 0 0 1px 2px #F7F7F5;
 }
 
 .panel-group .panel-heading + .panel-collapse .panel-body {
@@ -854,6 +862,15 @@ h2.title:before{
   text-align: center;
   vertical-align: baseline;
   white-space: nowrap;
+}
+
+.category-products span.badge:hover {
+  box-shadow: 0 0 1px 2px #F7F7F5;
+  border-radius: 0px;
+}
+
+.category-products .panel-body ul{
+  padding-left: 10px;
 }
 
 .panel-body ul{
