--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -2787,3 +2787,75 @@ div.product-image-wrapper:hover {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
+
+/* side */
+.yq-side {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	position: fixed;
+	width: 50px;
+	height: 275px;
+	right: 50px;
+	top: 180px;
+	z-index: 100;
+}
+
+.yq-side ul li {
+	width: 50px;
+	height: 50px;
+	float: left;
+	position: relative;
+}
+
+.yq-side-line-50 {
+	line-height: 50px;
+}
+
+.yq-side-line-22 {
+	line-height: 22px;
+}
+
+.yq-side ul li .sidebox {
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	text-align:center;
+	top: 0;
+	right: 0;
+	background: #ffffff;
+	opacity: 0.8;
+	filter: Alpha(opacity = 80);
+	color: #FE980F;
+	font: 14px;
+	overflow: hidden;
+	border-bottom: solid 1px #FE980F;
+	border-left: solid 1px #FE980F;
+	border-right: solid 1px #FE980F;
+	vertical-align: middle;
+}
+.yq-side ul li .go-to-page {
+	cursor: pointer;
+}
+.yq-side ul li .sidebox span {
+	display: none;
+}
+
+.yq-side ul li .sidebox i {
+	display: block;
+	margin-top: 13px;
+}
+
+.yq-side ul li .sidebox:hover {
+	opacity: 1;
+	filter: Alpha(opacity=100);
+	background: #FE980F;
+	color: #FFFFFF;
+}
+.yq-side ul li .sidebox:hover span {
+	margin:0px;
+	display: block;
+}
+.yq-side ul li .sidebox:hover i {
+	display: none;
+}
