--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -989,14 +989,22 @@ h2.title {
 }
 
 .product-image-wrapper{
+/* 	border:1px solid #F7F7F5; */
+/* 	overflow: hidden; */
+/* 	margin-bottom:30px; */
+/* 	height: 441px; */
 	border:1px solid #F7F7F5;
 	overflow: hidden;
 	margin-bottom:30px;
 	height: 441px;
+	margin-top: 3px;
+	box-shadow: 0px 0px 3px 1px #CCCCCC;
+	padding-left: 10px;
 }
 
 div.product-image-wrapper:hover {
-	box-shadow: 0 0 2px 2px #FE980F;
+/* 	box-shadow: 0 0 2px 2px #FE980F; */
+	box-shadow: 3px 3px 5px 3px #CCCCCC;
 }
 
 .single-products {
@@ -2926,3 +2934,71 @@ div.product-image-wrapper:hover {
     -webkit-transform: scaleY(1.0);
   }
 }
+
+
+
+
+
+
+
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu:hover {
+	background: #e2e1e1;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
+
+.dropdown:hover>.dropdown-menu {
+    display: block;
+    margin-top: 0;
+ }
+ 
+ .mainmenu div.dropdown ul li {
+    padding-right: 0px;
+    padding-left: 0px;
+ }
