--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -1158,7 +1158,7 @@ div.product-image-wrapper:hover {
 }
 
 .category-tab {
-  overflow: hidden;
+/*   overflow: hidden; */
 }
 
 .category-tab-ul {
