--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -1396,6 +1396,7 @@ div.product-image-wrapper:hover {
   border: 1px solid #F7F7F0;
   overflow: hidden;
   padding-bottom: 60px;
+  padding-bottom: 70px;
   padding-left: 60px;
   padding-top: 60px;
   position: relative;
