--- a/web/shop/css/main.css
+++ b/web/shop/css/main.css
@@ -883,8 +883,9 @@ h2.title:before{
 }
 
 .category-products span.badge:hover {
-  box-shadow: 0 0 1px 1px #F7F7F5;
-  border-radius: 0px;
+/*   box-shadow: 0 0 1px 1px #F7F7F5; */
+/*   border-radius: 0px; */
+  color: #953408;
 }
 
 .category-products .panel-body ul{
@@ -3042,4 +3043,46 @@ div.product-image-wrapper:hover {
 
 .mainmenu .dropdown-menu .divider {
 	margin: 2px 0;
+}
+
+.mainmenu li.dropdown-submenu {
+	border-bottom: 1px double #b36802;
+    padding-bottom: 4px;
+    padding-top: 4px;
+}
+.mainmenu li.dropdown-submenu:last-child {
+	border-bottom: 0px double #b36802;
+    padding-top: 4px;
+}
+.mainmenu li.dropdown-submenu li {
+	border-bottom: 1px double #b36802;
+    padding-bottom: 4px;
+    padding-top: 4px;
+}
+.mainmenu li.dropdown-submenu li:last-child {
+	border-bottom: 0px double #b36802;
+    padding-top: 4px;
+}
+
+#accordian div.panel-body ul a {
+	padding-right: 15px;
+	width: 160px;
+	text-align: left;
+	cursor: pointer;
+	color: #ffffff;
+}
+#accordian div.panel-body ul a:hover {
+	color: #953408;
+}
+
+#accordian div.panel.panel-default {
+	background-color: #fe980f;
+/*     border-bottom: 1px double #b36802; */
+    border-bottom: 1px double #ffffff;
+    padding-bottom: 10px;
+    padding-top: 5px;
+}
+#accordian div.panel.panel-default:last-child {
+	background-color: #fe980f;
+    border-bottom: 0px double #ffffff;
 }
